XMLExper/m17/m17_4_1_tinyxml2/comparisono.txt
In file included from tinyxml2.cpp:24:
tinyxml2.h:2302:18: error: ‘virtual bool tinyxml2::XMLPrinter::Visit(const tinyxml2::XMLText&)’ marked ‘override’, but does not override
 2302 |     virtual bool Visit( const XMLText& text ) override;
      |                  ^~~~~
tinyxml2.cpp: In member function ‘virtual bool tinyxml2::XMLText::Accept(tinyxml2::XMLVisitor*) const’:
tinyxml2.cpp:1295:34: error: no matching function for call to ‘tinyxml2::XMLVisitor::Visit(const tinyxml2::XMLText&)’
 1295 |     return visitor->Visit( *this );
      |                                  ^
In file included from tinyxml2.cpp:24:
tinyxml2.h:505:18: note: candidate: ‘virtual bool tinyxml2::XMLVisitor::Visit(const tinyxml2::XMLDeclaration&)’
  505 |     virtual bool Visit( const XMLDeclaration& /*declaration*/ )  {
      |                  ^~~~~
tinyxml2.h:505:25: note:   no known conversion for argument 1 from ‘const tinyxml2::XMLText’ to ‘const tinyxml2::XMLDeclaration&’
  505 |     virtual bool Visit( const XMLDeclaration& /*declaration*/ )  {
      |                         ^~~~~~~~~~~~~~~~~~~~~
tinyxml2.h:511:18: note: candidate: ‘virtual bool tinyxml2::XMLVisitor::Visit(const tinyxml2::XMLComment&)’
  511 |     virtual bool Visit( const XMLComment& /*comment*/ )    {
      |                  ^~~~~
tinyxml2.h:511:25: note:   no known conversion for argument 1 from ‘const tinyxml2::XMLText’ to ‘const tinyxml2::XMLComment&’
  511 |     virtual bool Visit( const XMLComment& /*comment*/ )    {
      |                         ^~~~~~~~~~~~~~~~~
tinyxml2.h:515:18: note: candidate: ‘virtual bool tinyxml2::XMLVisitor::Visit(const tinyxml2::XMLUnknown&)’
  515 |     virtual bool Visit( const XMLUnknown& /*unknown*/ )    {
      |                  ^~~~~
tinyxml2.h:515:25: note:   no known conversion for argument 1 from ‘const tinyxml2::XMLText’ to ‘const tinyxml2::XMLUnknown&’
  515 |     virtual bool Visit( const XMLUnknown& /*unknown*/ )    {
      |                         ^~~~~~~~~~~~~~~~~
diff: tinyxml2.o: No such file or directory
